[package]
name = "raft"
version = "0.0.1"
authors = [
    "Andrew Hobden <andrew@hoverbear.org>",
    "Dan Burkert <dan@danburkert.com>",
    "James McGlashan <github@darkfox.id.au>",
]
build = "build.rs"

[build-dependencies.capnpc]
git = "https://github.com/dwrensha/capnpc-rust"

[dependencies]
log = "*"
rand = "*"
uuid = "*"
bufstream = "*"
wrapped_enum = "*"
scoped_log = "*"

[dependencies.capnp]
git = "https://github.com/danburkert/capnproto-rust"
branch = "async"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dev-dependencies]
docopt = "*"
env_logger = "*"
rustc-serialize = "*"
